--- a/Public /index.html
+++ b/Public /index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0f172a" />
-    <title>SwarmDeal - AI Group Buying</title>
+    <meta name="description" content="SwarmDeal - AI Group Buying Platform" />
+    <title>SwarmDeal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
